--- a/pag1.html
+++ b/pag1.html
@@ -106,8 +106,11 @@
     <footer>
         <div id="footer_prici">
             <div class="dados_empre">
-                <img src="#" alt="ogo2">
-                <p>Email</p>
+                <div>
+                    <img class="logo" src="IMG/logo.jpg" alt="ogo2">
+                </div>
+                <div>   
+                    <p>Email</p>
                 <a href="#">exemplo@gmail.com</a>
 
                 <p>Endereço:</p>
@@ -115,6 +118,7 @@
 
                 <p>Telefone:</p>
                 <a href="#">40028922</a>
+            </div>
             </div>
 
             <div class="redes_socias">
